[package]
name = "chip-8"
version = "0.1.0"
authors = ["Joey Gibson <joey@joeygibson.com>"]
edition = "2018"
description = "A simple Rust implementation of a Chip-8 emulator."
readme = "README.md"
repository = "https://github.com/joeygibson/chip-8"
license = "MIT"
keywords = ["chip8", "chip-8", "emulator"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
easycurses = "0.12.2"
getopts = "0.2"